--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
       }
     }
   </script>
+  <audio autoplay loop>
+  <source src="sarki.mp3" type="audio/mpeg">
+  Tarayıcınız ses çalmayı desteklemiyor.
+</audio>
 </body>
 
 </html>
+
