--- a/index.html
+++ b/index.html
@@ -156,11 +156,42 @@
       }
     }
   </script>
-  <audio autoplay loop>
+  <!-- Müzik çalma butonu -->
+<button id="playButton" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #ff66b2;
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 12px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+">
+🎵 Müziği Başlat
+</button>
+
+<audio id="myAudio" loop>
   <source src="sarki.mp3" type="audio/mpeg">
   Tarayıcınız ses çalmayı desteklemiyor.
+</audio>
+
+<script>
+  const button = document.getElementById("playButton");
+  const audio = document.getElementById("myAudio");
+
+  button.addEventListener("click", () => {
+    audio.play();
+    button.innerText = "🎶 Çalıyor...";
+    button.disabled = true;
+    button.style.backgroundColor = "#aaa";
+  });
+</script>
 </audio>
 </body>
 
 </html>
+
 
