--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MEHMET ❤️ ELA</title>
   <style>
+    <style>
+body {
+  background-image: url('https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+</style>
+
     body {
       margin: 0;
       height: 100vh;
@@ -113,3 +123,4 @@
   </script>
 </body>
 </html>
+
