--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <h2>Seni çok seviyorum Ela</h2>
 
   <button id="playButton">🎵 Müziği Başlat</button>
-  <audio id="music" src="muzik.mp3"></audio>
+  <audio id="music" src="baba.mp3"></audio>
 
   <script>
     // Müzik butonu
@@ -104,3 +104,4 @@
   </script>
 </body>
 </html>
+
