--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <h1>MEHMET ❤️ ELA</h1>
-  <h2>Seni çok seviyorum Ela</h2>
+  <h2>ÇOK SEVİYORUM SENİ ELAA</h2>
 
   <button id="playButton">🎵 Müziği Başlat</button>
   <audio id="music" src="baba.mp3"></audio>
@@ -104,4 +104,5 @@
   </script>
 </body>
 </html>
+
 
