--- a/index.html
+++ b/index.html
@@ -35,6 +35,52 @@
       text-shadow: 0 0 10px #ff66b2;
     }
 
+    /* Kutucuk alanı */
+    .box-container {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .box {
+      background-color: rgba(0, 0, 0, 0.6);
+      border: 2px solid #ff66b2;
+      border-radius: 15px;
+      padding: 20px;
+      width: 250px;
+      height: 250px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 15px #ff66b2;
+    }
+
+    .box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    /* Müzik butonu */
+    #playButton {
+      background-color: #ff66b2;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      padding: 15px 25px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: 0.3s;
+    }
+
+    #playButton:hover {
+      background-color: #ff3385;
+    }
+
     /* Kalpler */
     .heart {
       position: fixed;
@@ -48,33 +94,25 @@
       0% { transform: translateY(0) scale(1); opacity: 1; }
       100% { transform: translateY(-800px) scale(1.5); opacity: 0; }
     }
-
-    /* Müzik butonu */
-    #playButton {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: black;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      padding: 15px 25px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: 0.3s;
-    }
-
-    #playButton:hover {
-      background-color: #444;
-    }
   </style>
 </head>
 <body>
   <h1>MEHMET ❤️ ELA</h1>
   <h2>ÇOK SEVİYORUM SENİ ELAA</h2>
 
-  <button id="playButton">🎵 Müziği Başlat</button>
-  <audio id="music" src="baba.mp3"></audio>
+  <!-- Kutular -->
+  <div class="box-container">
+    <!-- Müzik kutusu -->
+    <div class="box">
+      <button id="playButton">🎵 Müziği Başlat</button>
+      <audio id="music" src="baba.mp3"></audio>
+    </div>
+
+    <!-- Fotoğraf kutusu -->
+    <div class="box">
+      <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim2.jpg" alt="Bizim Fotoğrafımız">
+    </div>
+  </div>
 
   <script>
     // Müzik butonu
@@ -104,5 +142,3 @@
   </script>
 </body>
 </html>
-
-
