--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       background-color: rgba(0, 0, 0, 0.6);
       border: 2px solid #ff66b2;
       border-radius: 15px;
-      width: 150px;
-      height: 150px;
+      width: 180px;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -60,7 +60,7 @@
     }
 
     .box.open {
-      width: 250px;
+      width: 350px;
       height: 250px;
       background-color: rgba(0, 0, 0, 0.8);
     }
@@ -80,27 +80,43 @@
       opacity: 1;
     }
 
-    .box img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-
     /* Müzik butonu */
     #playButton {
       background-color: #ff66b2;
       color: white;
       border: none;
-      border-radius: 10px;
-      padding: 15px 25px;
+      border-radius: 8px;
+      padding: 10px 20px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 14px;
       transition: 0.3s;
     }
 
     #playButton:hover {
       background-color: #ff3385;
+    }
+
+    /* Fotoğraf galerisi */
+    .photo-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 8px;
+      width: 100%;
+      height: 100%;
+    }
+
+    .photo-gallery img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #ff66b2;
+      transition: transform 0.3s;
+    }
+
+    .photo-gallery img:hover {
+      transform: scale(1.1);
     }
 
     /* Kalpler */
@@ -130,13 +146,19 @@
         <button id="playButton">🎵 Müziği Başlat</button>
         <audio id="music" src="baba.mp3"></audio>
       </div>
+      <span class="box-label">🎶 Müzik</span>
     </div>
 
     <!-- Fotoğraf kutusu -->
     <div class="box" id="photoBox">
       <div class="box-content">
-        <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim2.jpg" alt="Bizim Fotoğrafımız">
+        <div class="photo-gallery">
+          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim1.jpg" alt="Foto 1">
+          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim2.jpg" alt="Foto 2">
+          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim3.jpg" alt="Foto 3">
+        </div>
       </div>
+      <span class="box-label">📸 Fotoğraf Albümü</span>
     </div>
   </div>
 
