--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
     <div class="box" id="photoBox">
       <div class="box-content">
         <div class="photo-gallery">
-          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim1.jpg" alt="Foto 1">
-          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim2.jpg" alt="Foto 2">
-          <img src="https://raw.githubusercontent.com/babapro341/elama-hediye/refs/heads/main/resim3.jpg" alt="Foto 3">
+          <img src="https://raw.githubusercontent.com/babapro341/elaaaakalpppbeenn/refs/heads/main/WhatsApp%20Görsel%202025-10-19%20saat%2014.57.13_e4baf645.jpg" alt="Foto 1">
+          <img src="https://raw.githubusercontent.com/babapro341/elaaaakalpppbeenn/refs/heads/main/WhatsApp%20Görsel%202025-10-19%20saat%2014.57.13_da7e790d.jpg" alt="Foto 2">
+          <img src="https://raw.githubusercontent.com/babapro341/elaaaakalpppbeenn/refs/heads/main/elam.jpg" alt="Foto 3">
         </div>
       </div>
       <span class="box-label">📸 Fotoğraf Albümü</span>
@@ -193,3 +193,4 @@
   </script>
 </body>
 </html>
+
